RESOLVED FIXED265617
RemoteLayerBackingStoreCollection doesn't support mixing remote rendering with in process rendering
https://bugs.webkit.org/show_bug.cgi?id=265617
Summary RemoteLayerBackingStoreCollection doesn't support mixing remote rendering wit...
Matt Woodrow
Reported 2023-11-30 16:39:12 PST
We currently have a polymorphic RemoteLayerBackingStoreCollection object, which requires an upfront decision about whether in-process or remote rendering will be used. We should instead have a single RemoteLayerBackingStoreCollection which supports mixing in-process and remote RemoteLayerBackingStore objects as needed.
Attachments
Radar WebKit Bug Importer
Comment 1 2023-11-30 16:39:23 PST
Matt Woodrow
Comment 2 2023-11-30 16:44:31 PST
EWS
Comment 3 2023-12-04 20:20:31 PST
Committed 271529@main (12198a179de6): <https://commits.webkit.org/271529@main> Reviewed commits have been landed. Closing PR #21131 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.